--- a/bookrpc/book-service-rpc/filters/prd.properties
+++ b/bookrpc/book-service-rpc/filters/prd.properties
@@ -1,55 +1,10 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.90.126:3309/st_hotel?characterEncoding=utf8
-jdbc.username=hotel
-jdbc.password=^d4DD8$g,uccDB=F
+jdbc.url=jdbc:mysql://127.0.0.1:3306/platform?characterEncoding=utf8
+jdbc.username=root
+jdbc.password=roya__123456
 jdbc.initialPoolSize=2
 jdbc.maxPoolSize=10
 jdbc.minPoolSize=2
 jdbc.maxIdleTime=60000
 jdbc.maxWait=60000
 jdbc.minEvictableIdleTimeMillis=25200000
-
-#===============redis=============
-redis1.host=192.168.90.118
-redis1.port=6370
-redis1.db=0
-redis1.auth=j4ghC9LnZN
-redis2.host=192.168.90.119
-redis2.port=6370
-redis2.db=0
-redis2.auth=j4ghC9LnZN
-redis3.host=192.168.90.120
-redis3.port=6370
-redis3.db=0
-redis3.auth=j4ghC9LnZN
-redis4.host=192.168.90.121
-redis4.port=6370
-redis4.db=0
-redis4.auth=j4ghC9LnZN
-redis5.host=192.168.90.122
-redis5.port=6370
-redis5.db=0
-redis5.auth=j4ghC9LnZN
-redis6.host=192.168.90.123
-redis6.port=6370
-redis6.db=0
-redis6.auth=j4ghC9LnZN
-
-redis.namespace=rpc_hotelproduct
-
-#===============logs=============
-log.home=/logs/shinetour-schedule-hotel
-test=true
-
-#================es-hotelInfo========================
-elastic.hosts.urls=http://127.0.0.1:9200
-elastic.hosts.urls.hotelinfo=http://127.0.0.1:9200
-elastic.hosts.urls.hotelproduct=http://127.0.0.1:9200
-elastic.hosts.urls.hotelminproduct=http://127.0.0.1:9200
-elastic.hosts.urls.hotelinfoTemp=http://es.test.com:9200
-elastic.hotelinfo.indexname=gn_hotel
-elastic.hotelinfo.schemaname=h_info
-elastic.hotelproduct.indexname=hrate
-elastic.hotelproduct.schemaname=h_rate
-elastic.hotelminproduct.indexname=hminprice
-elastic.hotelminproduct.schemaname=h_minprice
